--- a/PriorAuth.Web.Repositories/PriorAuth.Web.Repositories.csproj
+++ b/PriorAuth.Web.Repositories/PriorAuth.Web.Repositories.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PriorAuth.Web.Data\PriorAuth.Web.Data.csproj" />
   </ItemGroup>
 
