--- a/PriorAuth.Web.Api/PriorAuth.Web.Api.csproj
+++ b/PriorAuth.Web.Api/PriorAuth.Web.Api.csproj
@@ -20,8 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\PriorAuth.Web.Services\PriorAuth.Web.Services.csproj" />
     <ProjectReference Include="..\PriorAuth.Web.Repositories\PriorAuth.Web.Repositories.csproj" />
+    <ProjectReference Include="..\PriorAuth.Web.Services\PriorAuth.Web.Services.csproj" />
   </ItemGroup>
 
 </Project>
